# Noteflow

./: Readme.md
backend/: .env.example  main.py  pyproject.toml
backend/app/api/: main.py
backend/app/api/routes/: file_upload.py  folder.py  note_chat.py  pdf_chat.py  quiz.py  topic_notes.py  user.py  youtube_chat.py  youtube_notes.py
backend/app/db/: models.py  schemas.py
backend/app/utils/: note_prompt.py
frontend/: package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DialogButton.tsx  NumberOfQuestionsDialog.tsx
frontend/src/components/context/: FolderProvider.tsx  UserProvider.tsx  folderContext.ts
frontend/src/components/create/: CreateFromPDF.tsx  CreateFromTopic.tsx  CreateFromYouTube.tsx
frontend/src/components/pages/: AttemptedQuizes.tsx  AuthPage.tsx  ChatWithNotes.tsx  ChatWithPDF.tsx  ChatWithYouTube.tsx  HomePage.tsx  Layout.tsx  NoteDetails.tsx  NoteType.tsx  Notes.tsx  QuizResult.tsx  TakeQuizPage.tsx
frontend/src/components/sidebar/: AppSidebar.tsx
frontend/src/types/: index.ts
