[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asyncpg==0.31.0",
    "attrs==25.4.0",
    "bcrypt==5.0.0",
    "brotli==1.2.0",
    "cachetools==6.2.4",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cryptography==46.0.3",
    "dataclasses-json==0.6.7",
    "ddgs==9.10.0",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fake-useragent==2.2.0",
    "fastapi>=0.110",
    "fastapi-users==15.0.3",
    "fastapi-users-db-sqlalchemy==7.0.0",
    "filetype==1.2.0",
    "frozenlist==1.8.0",
    "google-auth==2.45.0",
    "google-genai==1.56.0",
    "greenlet==3.3.0",
    "groq==0.37.1",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "hyperframe==6.1.0",
    "idna==3.11",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain-core>=1.2,<2.0",
    "langchain>=1.2,<2.0",
    "langchain-community>=0.4",
    "langchain-text-splitters",
    "langchain-google-genai",
    "langchain-groq",
    "langchain-postgres",
    "langgraph",
    "langsmith",
    "langchain-google-genai==4.1.2",
    "langchain-groq==1.1.1",
    "langchain-postgres==0.0.16",
    "langchain-text-splitters==1.1.0",
    "langgraph==1.0.5",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.3.1",
    "langsmith==0.5.0",
    "lxml==6.0.2",
    "makefun==1.16.0",
    "marshmallow==3.26.2",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "numpy>=1.26,<2.0",
    "orjson==3.11.5",
    "ormsgpack==1.12.1",
    "packaging==25.0",
    "pgvector==0.3.6",
    "primp==0.15.0",
    "propcache==0.4.1",
    "psycopg==3.3.2",
    "psycopg-binary==3.3.2",
    "psycopg-pool==3.3.0",
    "psycopg2-binary==2.9.11",
    "pwdlib==0.3.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pyjwt==2.10.1",
    "pymupdf==1.26.7",
    "pypdf==6.6.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.21",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "sqlalchemy==2.0.45",
    "starlette==0.50.0",
    "tenacity==9.1.2",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.2",
    "uuid-utils==0.12.0",
    "uvicorn==0.40.0",
    "websockets==15.0.1",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "youtube-transcript-api==1.2.3",
    "zstandard==0.25.0",
    "opencv-python>=4.11.0.86",
    "openai-whisper>=20250625",
    "yt-dlp>=2026.1.29",
    "langchain-huggingface>=1.2.0",
    "sentence-transformers>=5.2.2",
    "gunicorn>=25.0.3",
    "pdfplumber>=0.11.9",
    "pytube>=15.0.0",
]
